Complete Phase 0 core stability and privacy foundation